fix page break on every line

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -62,8 +62,6 @@ body
   display: inline-flex
   margin-left: 2px
   color: $TitleColor
-  break-after: left
-
 
 .o-token-wrapper
   display: inline-flex
